会员中心账户信息

--- a/nainaiwang/src/pages/user/user.html
+++ b/nainaiwang/src/pages/user/user.html
@@ -5,6 +5,7 @@
     <title>个人中心</title>
     <link href="https://cdn.bootcss.com/normalize/8.0.0/normalize.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/static/css/base.css">
+    <link rel="stylesheet" href="/static/css/user.css">
 </head>
 <body>
 <div id="user"></div>
